implemented visitorAndContacts() + helping methods reworked return format